# rubberband

./: LICENSE  README  README.md  TODO
codeexamples/: assignonce.rbb  base_lib.rbb  class.rbb  customwhile.rbb  echo.rbb  factorial_y.rbb  fibonacci.rbb  hello.rbb  io.rbb  mergesort.rbb  new_curry.rbb  readonly.rbb  repl_hooks.rbb  selectionsort.rbb  teststring.rbb
codeexamples/literal_definition/: bignum.rbb  char.rbb  io.rbb  string.rbb
sketches/: README  grammar.rb  grammarsketch  grammarsketch2  object implementation.txt  rubber plan.txt  rubberband-sketch  rubberband-sketch10  rubberband-sketch11  rubberband-sketch12.txt  rubberband-sketch13.txt  rubberband-sketch14.txt  rubberband-sketch15  rubberband-sketch16  rubberband-sketch17  rubberband-sketch18  rubberband-sketch19  rubberband-sketch2  rubberband-sketch20  rubberband-sketch21  rubberband-sketch22  rubberband-sketch23  rubberband-sketch3  rubberband-sketch4.txt  rubberband-sketch5.txt  rubberband-sketch7.txt  rubberband-sketch8.txt  rubberband-sketch9.txt  theoretical description
src/: CMakeLists.txt
src/core/: CMakeLists.txt  block.cpp  block.hpp  block_private.hpp  common_syms.hpp  data_templates.hpp  error.hpp  interfaces.cpp  interfaces.hpp  lemon.c  lemon_parser.cpp  lemon_parser.y  object.cpp  object.hpp  object_private.cpp  object_private.hpp  parse.cpp  parse.hpp  parse_private.hpp  shared_data_t.hpp  splay_tree.hpp  symbol.cpp  symbol.hpp  to_string.cpp  tokenizer.cpp  tokenizer.hpp  value.cpp  value.hpp
src/core/patches/: lemon-cppoutput.diff  lemon-noconflicterror.diff
src/core/utils/: tuple_utils.hpp
src/mod/: CMakeLists.txt  base.rbb  char.rbb  consttostr.cpp  mod_common.hpp  native_str_obj.hpp  pack.cpp  putch.cpp  random.cpp  string.rbb  tostr.cpp  vector.rbb
src/modloader/: CMakeLists.txt  base.cpp  base.hpp  multi.cpp  multi.hpp  native_linux.cpp  native_linux.hpp  sourcefile.cpp  sourcefile.hpp
src/modloader/test/: CMakeLists.txt  native_linux_plugin_test.cpp  test_plugin.cpp
src/rbbi/: CMakeLists.txt  rbbi.cpp
src/rbbs/: CMakeLists.txt  README  main.cpp  sample.cfg.json  test.rbb
src/rbbs/cmake/Modules/: FindTclap.cmake
src/test/: arraytest.cpp  blocktest.cpp  booleantest.cpp  disabled  ducktest.cpp  emptytest.cpp  errortest.cpp  generic_objecttest.cpp  listtest.cpp  literal_definitiontest.cpp  metainfotest.cpp  modloadertest.cpp  numbertest.cpp  object_to_stringtest.cpp  parsetest.cpp  runtests.sh  symboltest.cpp  tabletest.cpp  tests_common.hpp  tokenizertest.cpp  value_ttest.cpp
src/test/rbb/: metainfotests.rbb  runtests.sh  testscommon.rbb
